# gazebo_model_path_example

./: README.md
gazebo_model_path_example/: CMakeLists.txt  package.xml
gazebo_model_path_example/launch/: granite.launch
gazebo_model_path_example/models/granite_table/: model.config
gazebo_model_path_example/urdf/: my_robot.urdf  table.urdf
gazebo_model_path_example/worlds/: table.world
